--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
                     <div class="carousel-caption d-flex flex-column align-items-center justify-content-center">
                         <div class="p-3" style="max-width: 900px;">
                             <h4 class="text-white text-uppercase mb-md-3">Delicious & Artisan</h4>
-                            <h1 class="display-3 text-white mb-md-4">Traditional Yogurt Made From Canada</h1>
+                            <h1 class="display-3 text-white mb-md-4">Traditional Yogurt Made From Australia</h1>
                             <a href="" class="btn btn-primary py-md-3 px-md-5 mt-2">Learn More</a>
                         </div>
                     </div>
