--- a/service.html
+++ b/service.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="utf-8">
-    <title>iCREAM - Ice Cream Shop Website Template</title>
+    <title>Commitments</title>
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
     <meta content="Free HTML Templates" name="keywords">
     <meta content="Free HTML Templates" name="description">
@@ -70,7 +70,7 @@
         <div class="container-lg position-relative p-0 px-lg-3" style="z-index: 9;">
             <nav class="navbar navbar-expand-lg bg-white navbar-light shadow p-lg-0">
                 <a href="index.html" class="navbar-brand d-block d-lg-none">
-                    <h1 class="m-0 display-4 text-primary"><span class="text-secondary">i</span>CREAM</h1>
+                    <h1 class="m-0 display-4 text-primary"><span class="text-secondary">Yokie's</span>Yogurt</h1>
                 </a>
                 <button type="button" class="navbar-toggler" data-toggle="collapse" data-target="#navbarCollapse">
                     <span class="navbar-toggler-icon"></span>
@@ -82,10 +82,10 @@
                         <a href="product.html" class="nav-item nav-link">Product</a>
                     </div>
                     <a href="index.html" class="navbar-brand mx-5 d-none d-lg-block">
-                        <h1 class="m-0 display-4 text-primary"><span class="text-secondary">i</span>CREAM</h1>
+                        <h1 class="m-0 display-4 text-primary"><span class="text-secondary">Yokie's</span>Yogurt</h1>
                     </a>
                     <div class="navbar-nav mr-auto py-0">
-                        <a href="service.html" class="nav-item nav-link active">Service</a>
+                        <a href="service.html" class="nav-item nav-link active">Commitments</a>
                         <a href="gallery.html" class="nav-item nav-link">Gallery</a>
                         <a href="contact.html" class="nav-item nav-link">Contact</a>
                     </div>
@@ -99,11 +99,11 @@
     <!-- Header Start -->
     <div class="jumbotron jumbotron-fluid page-header" style="margin-bottom: 90px;">
         <div class="container text-center py-5">
-            <h1 class="text-white display-3 mt-lg-5">Service</h1>
+            <h1 class="text-white display-3 mt-lg-5">Commitments</h1>
             <div class="d-inline-flex align-items-center text-white">
                 <p class="m-0"><a class="text-white" href="">Home</a></p>
                 <i class="fa fa-circle px-3"></i>
-                <p class="m-0">Service</p>
+                <p class="m-0">Commitments</p>
             </div>
         </div>
     </div>
@@ -115,7 +115,7 @@
         <div class="container py-5">
             <div class="row">
                 <div class="col-lg-6">
-                    <h1 class="section-title position-relative mb-5">Best Services We Provide For Our Clients</h1>
+                    <h1 class="section-title position-relative mb-5">Our Commitments to You</h1>
                 </div>
                 <div class="col-lg-6 mb-5 mb-lg-0 pb-5 pb-lg-0"></div>
             </div>
@@ -127,8 +127,13 @@
                                 <img class="rounded-circle w-100 h-100 bg-light p-3" src="img/service-1.jpg" style="object-fit: cover;">
                             </div>
                             <div class="position-relative text-center bg-light rounded p-4 pb-5" style="margin-top: -75px;">
-                                <h5 class="font-weight-semi-bold mt-5 mb-3 pt-5">Quality Maintain</h5>
-                                <p>Dolor nonumy sed eos sed lorem diam amet eos magna. Dolor kasd lorem duo stet kasd justo</p>
+                                <h4 class="font-weight-semi-bold mt-5 mb-3 pt-5">Quality Maintain</h4>
+                                <div>
+                                    <h5>Premium Ingredients</h5>
+                                    <p>Premium Ingredients: We source only the finest and freshest ingredients to ensure the highest quality in every batch of our yogurt with cookies.</p>
+
+                                </div>
+                                
                                 <a href="" class="border-bottom border-secondary text-decoration-none text-secondary">Learn More</a>
                             </div>
                         </div>
@@ -137,8 +142,12 @@
                                 <img class="rounded-circle w-100 h-100 bg-light p-3" src="img/service-2.jpg" style="object-fit: cover;">
                             </div>
                             <div class="position-relative text-center bg-light rounded p-4 pb-5" style="margin-top: -75px;">
-                                <h5 class="font-weight-semi-bold mt-5 mb-3 pt-5">Individual Approach</h5>
-                                <p>Dolor nonumy sed eos sed lorem diam amet eos magna. Dolor kasd lorem duo stet kasd justo</p>
+                                <h4 class="font-weight-semi-bold mt-5 mb-3 pt-5">Individual Approach</h4>
+                                <div>
+                                    <h5>Made-to-Order Service</h5>
+                                    <p>Experience a truly individual approach with our made-to-order service, where you can specify the exact ingredients, toppings, and flavors you desire for a one-of-a-kind yogurt and cookies experience.</p>
+
+                                </div>                                
                                 <a href="" class="border-bottom border-secondary text-decoration-none text-secondary">Learn More</a>
                             </div>
                         </div>
@@ -147,18 +156,12 @@
                                 <img class="rounded-circle w-100 h-100 bg-light p-3" src="img/service-3.jpg" style="object-fit: cover;">
                             </div>
                             <div class="position-relative text-center bg-light rounded p-4 pb-5" style="margin-top: -75px;">
-                                <h5 class="font-weight-semi-bold mt-5 mb-3 pt-5">Celebration Ice Cream</h5>
-                                <p>Dolor nonumy sed eos sed lorem diam amet eos magna. Dolor kasd lorem duo stet kasd justo</p>
-                                <a href="" class="border-bottom border-secondary text-decoration-none text-secondary">Learn More</a>
-                            </div>
-                        </div>
-                        <div class="service-item">
-                            <div class="service-img mx-auto">
-                                <img class="rounded-circle w-100 h-100 bg-light p-3" src="img/service-4.jpg" style="object-fit: cover;">
-                            </div>
-                            <div class="position-relative text-center bg-light rounded p-4 pb-5" style="margin-top: -75px;">
-                                <h5 class="font-weight-semi-bold mt-5 mb-3 pt-5">Delivery To Any Point</h5>
-                                <p>Dolor nonumy sed eos sed lorem diam amet eos magna. Dolor kasd lorem duo stet kasd justo</p>
+                                <h4 class="font-weight-semi-bold mt-5 mb-3 pt-5">Environment Awareness</h4>
+                                <div>
+                                    <h5>Environmental Responsibility</h5>
+                                    <p>We are dedicated to sustainable practices, minimizing our environmental footprint through eco-friendly packaging and responsible sourcing.</p>
+
+                                </div>                                 
                                 <a href="" class="border-bottom border-secondary text-decoration-none text-secondary">Learn More</a>
                             </div>
                         </div>
@@ -175,7 +178,7 @@
         <div class="container py-5">
             <div class="row justify-content-center">
                 <div class="col-lg-6">
-                    <h1 class="section-title position-relative text-center mb-5">Clients Say About Our Famous Ice Cream</h1>
+                    <h1 class="section-title position-relative text-center mb-5">Clients Say About Our Yokies</h1>
                 </div>
             </div>
             <div class="row justify-content-center">
@@ -183,24 +186,24 @@
                     <div class="owl-carousel testimonial-carousel">
                         <div class="text-center">
                             <i class="fa fa-3x fa-quote-left text-primary mb-4"></i>
-                            <h4 class="font-weight-light mb-4">Dolor eirmod diam stet kasd sed. Aliqu rebum est eos. Rebum elitr dolore et eos labore, stet justo sed est sed. Diam sed sed dolor stet amet eirmod eos labore diam</h4>
-                            <img class="img-fluid mx-auto mb-3" src="img/testimonial-1.jpg" alt="">
-                            <h5 class="font-weight-bold m-0">Client Name</h5>
-                            <span>Profession</span>
+                            <h4 class="font-weight-light mb-4">This yogurt and cookies combo is a match made in dessert heaven! The creamy yogurt perfectly complements the crunchy cookies, creating a symphony of flavors and textures. Every bite is a moment of pure bliss—definitely a must-try!"</h4>
+                            <img class="img-fluid mx-auto mb-3" src="img/bao.png" alt="">
+                            <h5 class="font-weight-bold m-0">Bao</h5>
+                            <span>Assistant Professor</span>
                         </div>
                         <div class="text-center">
                             <i class="fa fa-3x fa-quote-left text-primary mb-4"></i>
-                            <h4 class="font-weight-light mb-4">Dolor eirmod diam stet kasd sed. Aliqu rebum est eos. Rebum elitr dolore et eos labore, stet justo sed est sed. Diam sed sed dolor stet amet eirmod eos labore diam</h4>
-                            <img class="img-fluid mx-auto mb-3" src="img/testimonial-2.jpg" alt="">
-                            <h5 class="font-weight-bold m-0">Client Name</h5>
-                            <span>Profession</span>
+                            <h4 class="font-weight-light mb-4">As a dessert enthusiast, I can confidently say this yogurt and cookies duo is a winner! The yogurt is refreshingly smooth, and the cookies provide a delightful contrast. It's a delightful treat that has become a regular in my snack lineup. Try it—you won't be disappointed!"</h4>
+                            <img class="img-fluid mx-auto mb-3" src="img/mustafa.jpg" alt="">
+                            <h5 class="font-weight-bold m-0">Mostafa Mortezaie</h5>
+                            <span>SJSU Professor</span>
                         </div>
                         <div class="text-center">
                             <i class="fa fa-3x fa-quote-left text-primary mb-4"></i>
-                            <h4 class="font-weight-light mb-4">Dolor eirmod diam stet kasd sed. Aliqu rebum est eos. Rebum elitr dolore et eos labore, stet justo sed est sed. Diam sed sed dolor stet amet eirmod eos labore diam</h4>
-                            <img class="img-fluid mx-auto mb-3" src="img/testimonial-3.jpg" alt="">
-                            <h5 class="font-weight-bold m-0">Client Name</h5>
-                            <span>Profession</span>
+                            <h4 class="font-weight-light mb-4">I can't get enough of this yogurt and cookies combo! Seriously, the yogurt is like, the smoothest thing ever, and when you mix it with those amazing cookies—boom! Flavor explosion in your mouth. And the best part? It's guilt-free indulgence all the way. I'm totally recommending this to everyone I know. It's just that good!</h4>
+                            <img class="img-fluid mx-auto mb-3" src="img/armin.png" alt="">
+                            <h5 class="font-weight-bold m-0">Armin Moghadam</h5>
+                            <span>SJSU Advisor</span>
                         </div>
                     </div>
                 </div>
