--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
         <div class="container-lg position-relative p-0 px-lg-3" style="z-index: 9;">
             <nav class="navbar navbar-expand-lg bg-white navbar-light shadow p-lg-0">
                 <a href="index.html" class="navbar-brand d-block d-lg-none">
-                    <h1 class="m-0 display-4 text-primary"><span class="text-secondary">Yokie</span>Yogurt</h1>
+                    <h1 class="m-0 display-4 text-primary"><span class="text-secondary">Yokie's</span>Yogurt</h1>
                 </a>
                 <button type="button" class="navbar-toggler" data-toggle="collapse" data-target="#navbarCollapse">
                     <span class="navbar-toggler-icon"></span>
@@ -85,7 +85,7 @@
                         <h1 class="m-0 display-4 text-primary"><span class="text-secondary">Yokie's</span>Yogurt</h1>
                     </a>
                     <div class="navbar-nav mr-auto py-0">
-                        <a href="service.html" class="nav-item nav-link">Service</a>
+                        <a href="service.html" class="nav-item nav-link">Commitments</a>
                         <a href="gallery.html" class="nav-item nav-link">Gallery</a>
                         <a href="contact.html" class="nav-item nav-link">Contact</a>
                     </div>
@@ -101,7 +101,7 @@
         <div id="header-carousel" class="carousel slide" data-ride="carousel">
             <div class="carousel-inner">
                 <div class="carousel-item active">
-                    <img class="w-100" src="img/icecream-2.jpg" alt="Image">
+                    <img class="w-100" src="img/icecream3.jpg" alt="Image">
                     <div class="carousel-caption d-flex flex-column align-items-center justify-content-center">
                         <div class="p-3" style="max-width: 900px;">
                             <h4 class="text-white text-uppercase mb-md-3">Delicious & Artisan</h4>
@@ -111,12 +111,11 @@
                     </div>
                 </div>
                 <div class="carousel-item">
-                    <img class="w-100 h-75" src="img/cookies-1.jpg" alt="Image">
+                    <img class="w-100" src="img/cookies-1.jpg" alt="Image">
                     <div class="carousel-caption d-flex flex-column align-items-center justify-content-center">
                         <div class="p-3" style="max-width: 900px;">
                             <h4 class="text-white text-uppercase mb-md-3">Traditional & Delicious</h4>
-                            <h1 class="display-3 text-white mb-md-4">Cookies Crafted by Renowned Bakers and Chefs
-                            </h1>
+                            <h1 class="display-3 text-white mb-md-4">Cookies Crafted by Renowned Bakers and Chefs</h1>
                             <a href="" class="btn btn-primary py-md-3 px-md-5 mt-2">Learn More</a>
                         </div>
                     </div>
@@ -286,7 +285,7 @@
     <div class="container-fluid my-5 py-5 px-0">
         <div class="row justify-content-center m-0">
             <div class="col-lg-5">
-                <h1 class="section-title position-relative text-center mb-5">Delicious Ice Cream Made From Our Very Own Organic Milk</h1>
+                <h1 class="section-title position-relative text-center mb-5">Healthy Ingredients That You Can Taste</h1>
             </div>
         </div>
         <div class="row m-0 portfolio-container">
@@ -476,7 +475,7 @@
         <div class="container py-5">
             <div class="row justify-content-center">
                 <div class="col-lg-6">
-                    <h1 class="section-title position-relative text-center mb-5">Clients Say About Our Famous Ice Cream</h1>
+                    <h1 class="section-title position-relative text-center mb-5">Clients Say About Our Yokies</h1>
                 </div>
             </div>
             <div class="row justify-content-center">
