--- a/product.html
+++ b/product.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="utf-8">
-    <title>iCREAM - Ice Cream Shop Website Template</title>
+    <title>Product</title>
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
     <meta content="Free HTML Templates" name="keywords">
     <meta content="Free HTML Templates" name="description">
@@ -70,7 +70,7 @@
         <div class="container-lg position-relative p-0 px-lg-3" style="z-index: 9;">
             <nav class="navbar navbar-expand-lg bg-white navbar-light shadow p-lg-0">
                 <a href="index.html" class="navbar-brand d-block d-lg-none">
-                    <h1 class="m-0 display-4 text-primary"><span class="text-secondary">i</span>CREAM</h1>
+                    <h1 class="m-0 display-4 text-primary"><span class="text-secondary">Yokie's</span>Yogurt</h1>
                 </a>
                 <button type="button" class="navbar-toggler" data-toggle="collapse" data-target="#navbarCollapse">
                     <span class="navbar-toggler-icon"></span>
@@ -82,10 +82,10 @@
                         <a href="product.html" class="nav-item nav-link active">Product</a>
                     </div>
                     <a href="index.html" class="navbar-brand mx-5 d-none d-lg-block">
-                        <h1 class="m-0 display-4 text-primary"><span class="text-secondary">i</span>CREAM</h1>
+                        <h1 class="m-0 display-4 text-primary"><span class="text-secondary">Yokie's</span>Yogurt</h1>
                     </a>
                     <div class="navbar-nav mr-auto py-0">
-                        <a href="service.html" class="nav-item nav-link">Service</a>
+                        <a href="service.html" class="nav-item nav-link">Commitments</a>
                         <a href="gallery.html" class="nav-item nav-link">Gallery</a>
                         <a href="contact.html" class="nav-item nav-link">Contact</a>
                     </div>
@@ -115,35 +115,59 @@
         <div class="container py-5">
             <div class="row justify-content-center">
                 <div class="col-lg-6">
-                    <h1 class="section-title position-relative text-center mb-5">Best Prices We Offer For Ice Cream Lovers</h1>
+                    <h1 class="section-title position-relative text-center mb-5">Best Prices We Offer For Yokies Lover</h1>
                 </div>
             </div>
             <div class="row">
                 <div class="col-lg-3 col-md-6 mb-4 pb-2">
                     <div class="product-item d-flex flex-column align-items-center text-center bg-light rounded py-5 px-3">
                         <div class="bg-primary mt-n5 py-3" style="width: 80px;">
-                            <h4 class="font-weight-bold text-white mb-0">$99</h4>
+                            <h4 class="font-weight-bold text-white mb-0">$4.99</h4>
                         </div>
                         <div class="position-relative bg-primary rounded-circle mt-n3 mb-4 p-3" style="width: 150px; height: 150px;">
-                            <img class="rounded-circle w-100 h-100" src="img/product-1.jpg" style="object-fit: cover;">
+                            <img class="rounded-circle w-100 h-100" src="https://cdn11.bigcommerce.com/s-a8bu1murtb/images/stencil/1280x1280/products/1291/3297/media__96641.1585098571.jpg?c=1" style="object-fit: cover;">
                         </div>
-                        <h5 class="font-weight-bold mb-4">Vanilla Ice Cream</h5>
+                        <h5 class="font-weight-bold mb-4">Chocolate Yokies</h5>
                         <a href="" class="btn btn-sm btn-secondary">Order Now</a>
                     </div>
                 </div>
                 <div class="col-lg-3 col-md-6 mb-4 pb-2">
                     <div class="product-item d-flex flex-column align-items-center text-center bg-light rounded py-5 px-3">
                         <div class="bg-primary mt-n5 py-3" style="width: 80px;">
-                            <h4 class="font-weight-bold text-white mb-0">$99</h4>
+                            <h4 class="font-weight-bold text-white mb-0">$4.99</h4>
                         </div>
                         <div class="position-relative bg-primary rounded-circle mt-n3 mb-4 p-3" style="width: 150px; height: 150px;">
-                            <img class="rounded-circle w-100 h-100" src="img/product-2.jpg" style="object-fit: cover;">
+                            <img class="rounded-circle w-100 h-100" src="https://cdn11.bigcommerce.com/s-a8bu1murtb/products/1292/images/3298/media__74688.1585098571.386.513.jpg?c=1" style="object-fit: cover;">
                         </div>
-                        <h5 class="font-weight-bold mb-4">Vanilla Ice Cream</h5>
+                        <h5 class="font-weight-bold mb-4">Strawberry Yokies</h5>
                         <a href="" class="btn btn-sm btn-secondary">Order Now</a>
                     </div>
                 </div>
                 <div class="col-lg-3 col-md-6 mb-4 pb-2">
+                    <div class="product-item d-flex flex-column align-items-center text-center bg-light rounded py-5 px-3">
+                        <div class="bg-primary mt-n5 py-3" style="width: 80px;">
+                            <h4 class="font-weight-bold text-white mb-0">$4.99</h4>
+                        </div>
+                        <div class="position-relative bg-primary rounded-circle mt-n3 mb-4 p-3" style="width: 150px; height: 150px;">
+                            <img class="rounded-circle w-100 h-100" src="https://cdn11.bigcommerce.com/s-a8bu1murtb/images/stencil/1280x1280/products/1293/3299/media__68051.1585098572.jpg?c=1" style="object-fit: cover;">
+                        </div>
+                        <h5 class="font-weight-bold mb-4">Tangerine Yokies</h5>
+                        <a href="" class="btn btn-sm btn-secondary">Order Now</a>
+                    </div>
+                </div>
+                <div class="col-lg-3 col-md-6 mb-4 pb-2">
+                    <div class="product-item d-flex flex-column align-items-center text-center bg-light rounded py-5 px-3">
+                        <div class="bg-primary mt-n5 py-3" style="width: 80px;">
+                            <h4 class="font-weight-bold text-white mb-0">$4.99</h4>
+                        </div>
+                        <div class="position-relative bg-primary rounded-circle mt-n3 mb-4 p-3" style="width: 150px; height: 150px;">
+                            <img class="rounded-circle w-100 h-100" src="https://cdn11.bigcommerce.com/s-a8bu1murtb/images/stencil/1280x1280/products/1290/3296/media__89154.1585098571.jpg?c=1" style="object-fit: cover;">
+                        </div>
+                        <h5 class="font-weight-bold mb-4">Blueberry Yokies</h5>
+                        <a href="" class="btn btn-sm btn-secondary">Order Now</a>
+                    </div>
+                </div>
+                <!-- <div class="col-lg-3 col-md-6 mb-4 pb-2">
                     <div class="product-item d-flex flex-column align-items-center text-center bg-light rounded py-5 px-3">
                         <div class="bg-primary mt-n5 py-3" style="width: 80px;">
                             <h4 class="font-weight-bold text-white mb-0">$99</h4>
@@ -214,7 +238,7 @@
                         <h5 class="font-weight-bold mb-4">Vanilla Ice Cream</h5>
                         <a href="" class="btn btn-sm btn-secondary">Order Now</a>
                     </div>
-                </div>
+                </div> -->
                 <div class="col-12 text-center">
                     <a href="" class="btn btn-primary py-3 px-5">Load More</a>
                 </div>
