--- a/index.html
+++ b/index.html
@@ -529,8 +529,8 @@
                     <div class="row">
                         <div class="col-sm-6 text-center text-sm-right border-right mb-3 mb-sm-0">
                             <h5 class="font-weight-bold mb-2">Get In Touch</h5>
-                            <p class="mb-2">San Jose State University, California</p>
-                            <p class="mb-0">+1 669 350 5700</p>
+                            <p class="mb-2">San Jose State University, California </p>
+                            <p class="mb-0">+1 (510)-946-7193</p>
                         </div>
                         <div class="col-sm-6 text-center text-sm-left">
                             <h5 class="font-weight-bold mb-2">Opening Hours</h5>
@@ -539,7 +539,7 @@
                     </div>
                 </div>
                 <div class="col-12">
-                    <p class="m-0">&copy; <a href="#">Domain</a>. All Rights Reserved.
+                    <p class="m-0">&copy; <a href="#">Domain</a>. All Rights Reserved. 
                     </p>
                 </div>
             </div>
